# enigma2-openvision

./: .gitignore  .travis.yml  AUTHORS  BoxBrandingTest.py  ChangeLog  Makefile.am  Navigation.py  NavigationInstance.py  PowerTimer.py  README  README.md  RecordTimer.py  ServiceReference.py  StartEnigma.py  build.sh  chmod.sh  configure.ac  dos2unix.sh  doxy.conf  e2reactor.py  enigma2.bb  futurize.sh  keyids.py  keymapparser.py  mytest.py  pyo_patcher.py  skin.py  timer.py
data/: Makefile.am  convert-iso-639-3.py  encoding.conf  keymap.xml  keytranslation.xml  menu.xml  radio.mvi  remotes.xml  setup.xml  skin_default.xml  startwizard.xml  unicable.xml
data/7segment/: Makefile.am  skin_display.xml
data/VirtualKeyBoard_Icons/: Makefile.am  vkskin.xml
data/display/: Makefile.am
data/display/7segment/: skin_display.xml
data/display/display128/: skin_display.xml
data/display/display128dm/: skin_display.xml  skin_display_picon.xml
data/display/display220/: skin_display.xml  skin_display_picon.xml
data/display/display240/: skin_display.xml  skin_display_picon.xml
data/display/display390/: skin_display.xml  skin_display_picon.xml
data/display/display400/: skin_display.xml  skin_display_picon.xml
data/display/display480/: skin_display.xml  skin_display_picon.xml
data/display/display720/: skin_display.xml  skin_display_picon.xml
data/display/display800/: skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display/display800/Default_with_Picon_Fullscreen/: skin_display.xml
data/display/display96/: skin_display.xml
data/display/displaytext/: skin_display.xml  skin_display_alternate.xml
data/display/grautec70x0/: skin_display_grautec.xml
data/display/grautec8000/: skin_display_grautec.xml
data/display/vfd128/: Makefile.am  skin_display.xml
data/display/vfd140/: skin_display.xml
data/display/vfd255/: skin_display.xml  skin_display_picon.xml
data/display128/: skin_display.xml
data/display128dm/: Makefile.am  skin_display.xml
data/display220/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display390/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display400/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display480/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display720/: Makefile.am  skin_display.xml  skin_display_picon.xml
data/display800/: Makefile.am  skin_display.xml  skin_display_picon.xml  skin_display_templates.xml
data/display800/Default_with_Picon_Fullscreen/: Makefile.am  skin_display.xml
data/display96/: Makefile.am  skin_display.xml
data/displaytext/: Makefile.am  skin_display.xml
data/grautec70x0/: Makefile.am  skin_display_grautec.xml
data/grautec8000/: Makefile.am  skin_display_grautec.xml
data/grautec8000/fonts/: Makefile.am
data/keymaps/: eng.info
data/rc_models/: Makefile.am  amiko4.xml  amlogic.xml  ax4.xml  axas3.xml  dinobot.xml  edision1.xml  edision2.xml  edision3.xml  et6500.xml  et6x00.xml  et7x00mini.xml  et8000.xml  et9500.xml  et9x00.xml  formuler1.xml  gb0.xml  gb1.xml  gb2.xml  gb3.xml  gb4.xml  ini0.xml  ini1.xml  ini2.xml  ini5.xml  ini7.xml  ini8.xml  iqon3.xml  maxytec1.xml  mediabox.xml  miraclebox.xml  multibox.xml  octagon6.xml  odinm9.xml  optimuss1.xml  optimuss2.xml  protek2.xml  qviart1.xml  qviart2.xml  qviart3.xml  (+26 more)
data/skin_default/: Makefile.am  skin.xml
data/skin_default/buttons/: Makefile.am
data/skin_default/icons/: Makefile.am
data/skin_default/spinner/: Makefile.am
data/skin_fallback_1080/: Makefile.am  skin.xml
data/skin_fallback_1080/epg/: Makefile.am
data/vfd128/: Makefile.am  skin_display.xml
data/vfd140/: Makefile.am
data/vfd255/: Makefile.am  skin_display.xml
lib/python/: Bootstrap.py  BoxBrandingTest.py  GlobalActions.py  Makefile.am  Navigation.py  PowerTimer.py  RecordTimer.py  Remote.py  ServiceReference.py  StartEnigma.py  TranslationHelper.py  connections.h  e2reactor.py  enigma_py_patcher.py  enigma_python.i  keyids.py  keymapparser.py  py_patcher.py  pyo_patcher.py  python.cpp  python.h  python_base.i  python_console.i  python_service.i  skin.py  timer.py
lib/python/Components/: AVSwitch.py  About.py  ActionMap.py  BlinkingPixmap.py  Button.py  ChannelsImporter.py  ChoiceList.py  ClientMode.py  Clock.py  ConditionalWidget.py  ConfigList.py  Console.py  DiskInfo.py  Element.py  EpgList.py  EpgLoadSave.py  FIFOList.py  FanControl.py  FileList.py  GUIComponent.py  GUISkin.py  HTMLComponent.py  Harddisk.py  HdmiCec.py  HdmiRecord.py  HelpMenuList.py  ImportChannels.py  Input.py  InputDevice.py  InputHotplug.py  International.py  Ipkg.py  Keyboard.py  Label.py  Language.py  Lcd.py  Makefile.am  MediaPlayer.py  MenuList.py  MovieList.py  (+45 more)
lib/python/Components/Converter/: AnalogClock.py  Audio.py  BhAnalogic.py  BhStreamInfo.py  Combine.py  (+69 more)
lib/python/Plugins/: Plugin.py
lib/python/Screens/: About.py  AudioSelection.py  AutoDiseqc.py  ChannelSelection.py  ChoiceBox.py  Ci.py  ClientMode.py  ClockDisplay.py  ConfigMenu.py  Console.py  CopyFiles.py  CronTimer.py  DVD.py  Dish.py  EpgSelection.py  EventView.py  FactoryReset.py  FixedMenu.py  FlashExpander.py  FlashImage.py  Globals.py  HDMICEC.py  HarddiskSetup.py  HelpMenu.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  Information.py  InputBox.py  InputDeviceSetup.py  InstallWizard.py  Ipkg.py  LanguageSelection.py  LocaleSelection.py  LocationBox.py  LogManager.py  Makefile.am  Menu.py  MessageBox.py  MinuteInput.py  (+55 more)
lib/python/Tools/: ASCIItranslit.py  Alternatives.py  BoundFunction.py  CIHelper.py  CList.py  Conversions.py  CopyFiles.py  CountryCodes.py  Directories.py  Downloader.py  Event.py  FallbackTimer.py  FuzzyDate.py  Geolocation.py  GetEcmInfo.py  HardwareInfo.py  Hex2strColor.py  ISO639.py  Import.py  KeyBindings.py  LoadPixmap.py  Log.py  LogConfig.py  Makefile.am  MultiBoot.py  Multiboot.py  Notifications.py  NumericalTextInput.py  OEMInfo.py  Profile.py  PyVerHelper.py  RedirectOutput.py  StbHardware.py  TextBoundary.py  Trace.py  Transponder.py  Trashcan.py  UnitConversions.py  WeatherID.py  XMLTools.py  (+1 more)
(+476 files in other folders)
